reminders stepper fixed (centered), white space eliminated

--- a/src/components/DonateThings/DonateThings.scss
+++ b/src/components/DonateThings/DonateThings.scss
@@ -1,22 +1,24 @@
 .step__info {
-  height: 7.5rem;
+  height: 8rem;
   width: 100vw;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
-  z-index: 1;
   background-color: darken($main-yellow, 10%);
+ 
+  position: relative;
+  left: 0;
+  top: -4px;
+
 }
 
 .step__info-content-banner {
-  
   height: 50%;
-  width: 80%;
+  width: 90%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
-
   p {
     width: 80%;
     height: auto;
